src/test/deca/syntax/invalid/main_before_class.deca
{
    print("main");
}
class Test{

    protected int j;
}